feat: style loader, add video attrs, general refactor

--- a/sample/index.html
+++ b/sample/index.html
@@ -6,10 +6,7 @@
     <title>ivid</title>
   </head>
   <body>
-    <i-video id="ivid-sample">
-      <video>
-        Please, get a browser!
-      </video>
+    <i-video id="ivid-sample" controls autoplay playsinline>
     </i-video>
   </body>
 </html>
