feat: implement controls + extract styles

--- a/sample/index.html
+++ b/sample/index.html
@@ -3,6 +3,8 @@
   <head>
     <script src="./lib/ivid.js" type="module" async></script>
     <script src="index.js" async></script>
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>ivid</title>
   </head>
   <body>
