refactor: ivid sandbox

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <script src="./lib/ivid.js" type="module" async></script>
     <script src="index.js" async></script>
-    <link href="style.css" rel="stylesheet">
+    <script src="./lib/ivid.min.js" type="module" async></script>
+    
+    <!-- Optional -->
+    <link href="./lib/ivid.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>ivid</title>
+
+    <title>ivid sandbox</title>
   </head>
   <body>
-    <i-video id="ivid-sample" controls autoplay playsinline>
-    </i-video>
+    <i-video id="ivid-sample" controls autoplay playsinline></i-video>
   </body>
 </html>
