refactor: upkg dependencies

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="index.js" async></script>
-    <script src="//unpkg.com/@ividjs/ivid@latest/dist/ivid.min.js" type="module" async></script>
+    <script src="//unpkg.com/@ividjs/ivid@latest" type="module" async></script>
     
     <!-- Optional -->
     <link href="//unpkg.com/@ividjs/ivid@latest/dist/ivid.min.css" rel="stylesheet">
