--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <script src="index.js" async></script>
-    <script src="//unpkg.com/@ividjs/ivid@latest" type="module" async></script>
+    <script src="//unpkg.com/@ividjs/ivid@1.0.5" type="module" async></script>
     
     <!-- Optional -->
-    <link href="//unpkg.com/@ividjs/ivid@latest/dist/ivid.min.css" rel="stylesheet">
+    <link href="//unpkg.com/@ividjs/ivid@1.0.5/dist/ivid.min.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <title>ivid sandbox</title>
