--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="//unpkg.com/@ividjs/ivid@1.0.5/dist/ivid.min.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
     <title>ivid sandbox</title>
   </head>
   <body>
